# LeatherScript-prototype

./: .gitignore  leatherscript.cabal  package.json  pp.rb
Executable/: leather.hs
Language/LeatherScript/: AST.hs  Generator.hs  LeatherShield.hs  Parser.hs  SyntaxDef.hs  Tokenizer.hs  Types.hs
examples/: pattern-matching.lth  procedural.lth  procedural.lthstx  x.lth
lib/: std.lth  std.lthstx  test.lth  test1.lth
misc/: lth.JSON-tmLanguage  lth.tmLanguage  lthstx-mode.el  lthstx.JSON-tmLanguage  lthstx.tmLanguage
src/: leathershield.lth  tokenizer.lth
test/: InfixNotationSpec.hs  ParserSpec.hs  notation.lthstx  verify.lth
