name:           leatherscript
version:        0.0.1
cabal-version:  >= 1.8
build-type:     Simple
license:        MIT
license-file:   LICENSE
copyright:      Copyright (C) 2014 Pasberth
homepage:       https://github.com/pasberth/leatherscript
bug-reports:    https://github.com/pasberth/leatherscript/issues
author:         Pasberth
maintainer:     Pasberth <pasberth@gmail.com>
stability:      experimental
synopsis:       Yet another altJS
description:
  TODO

category:       Language

library
  ghc-options:    -Wall -O2
  build-depends:
      base
    , mtl
    , lens
    , either
    , control-bool
    , control-monad-loop
    , composition
    , text
    , unordered-containers
    , vector
    , aeson
    , trifecta
  exposed-modules:
    Language.LeatherScript.Types,
    Language.LeatherScript.Tokenizer,
    Language.LeatherScript.Parser,
    Language.LeatherScript.SyntaxDef,
    Language.LeatherScript.AST,
    Language.LeatherScript.Generator

test-suite test-parser
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    ParserSpec.hs
  build-depends:
      base
    , lens
    , text
    , unordered-containers
    , vector
    , trifecta
    , leatherscript
    , hspec

executable leather
  hs-source-dirs:
    Executable
  main-is:
    leather.hs
  build-depends:
      base
    , mtl
    , utf8-string
    , text
    , unordered-containers
    , vector
    , aeson
    , leatherscript
    , filepath
    , directory